--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
       </div>
     </aside>
    <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
-    <!-- Navbar -->
-    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" navbar-scroll="true">
+        <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" navbar-scroll="true">
       <div class="container-fluid py-1 px-3">
         <div class="d-flex flex-column">
     <h4>Material Dashboard</h4>
@@ -177,8 +176,8 @@
         <div class="col-xl-4 col-sm-6 mb-xl-0 mb-4">
           <div class="card no-radius p-1">
             <div class="card-header p-1 pt-2">
-              <div class="icon icon-md icon-shape bg-gradient-success shadow-dark icon-bottom text-center  mt-n4 position-absolute">
-                <i class="material-icons opacity-10">weekend</i>
+              <div class="icon icon-md icon-shape bg-gradient-success borderRadius-100 shadow-dark icon-bottom text-center  mt-n4 position-absolute">
+                <i class="fa fa-md fa-copy"></i>
               </div>
               <p class="ms-1 mb-0 font-weight-bold">Used Space</p>
               <hr class="success horizontal mb-0 my-2">
@@ -192,7 +191,7 @@
            <div class="col-xl-4 col-sm-6 mb-xl-0 mb-4">
             <div class="card no-radius p-1">
               <div class="card-header p-1 pt-2">
-                <div class="icon icon-md icon-shape bg-gradient-purple shadow-dark icon-bottom text-center  mt-n4 position-absolute">
+                <div class="icon icon-md icon-shape bg-gradient-purple borderRadius-100 shadow-dark icon-bottom text-center  mt-n4 position-absolute">
                   <i class="fa fa-info"></i>
                 </div>
                 <p class="ms-1 mb-0 font-weight-bold">Fixed Issues</p>
@@ -207,7 +206,7 @@
              <div class="col-xl-4 col-sm-6 mb-xl-0 mb-4">
               <div class="card no-radius p-1">
                 <div class="card-header p-1 pt-2">
-                  <div class="icon icon-md icon-shape bg-gradient-info  shadow-dark icon-bottom text-center  mt-n4 position-absolute">
+                  <div class="icon icon-md icon-shape bg-gradient-info borderRadius-100  shadow-dark icon-bottom text-center  mt-n4 position-absolute">
                    <i class="fa fa-twitter"></i>
                   </div>
                   <p class="ms-1 mb-0 font-weight-bold">Followers</p>
